fixed partially on page jump menu

--- a/blocks/page-jump-menu/page-jump-menu.css
+++ b/blocks/page-jump-menu/page-jump-menu.css
@@ -555,8 +555,20 @@ video {
   z-index: 10;
 }
 
+.page-jump-menu-wrapper :is(.order-last) {
+  order: 9999;
+}
+
 .page-jump-menu-wrapper :is(.-mt-20) {
   margin-top: -5rem;
+}
+
+.page-jump-menu-wrapper :is(.mb-2) {
+  margin-bottom: 0.5rem;
+}
+
+.page-jump-menu-wrapper :is(.mt-4) {
+  margin-top: 1rem;
 }
 
 .page-jump-menu-wrapper :is(.mt-\[-1px\]) {
@@ -567,8 +579,45 @@ video {
   display: block;
 }
 
+.page-jump-menu-wrapper :is(.flex) {
+  display: flex;
+}
+
+.page-jump-menu-wrapper :is(.hidden) {
+  display: none;
+}
+
+.page-jump-menu-wrapper :is(.h-8) {
+  height: 2rem;
+}
+
+.page-jump-menu-wrapper :is(.w-48) {
+  width: 12rem;
+}
+
+.page-jump-menu-wrapper :is(.w-8) {
+  width: 2rem;
+}
+
+.page-jump-menu-wrapper :is(.w-auto) {
+  width: auto;
+}
+
 .page-jump-menu-wrapper :is(.w-full) {
   width: 100%;
+}
+
+.page-jump-menu-wrapper :is(.gap-x-2) {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.page-jump-menu-wrapper :is(.overflow-hidden) {
+  overflow: hidden;
+}
+
+.page-jump-menu-wrapper :is(.rounded) {
+  border-radius: 0.25rem;
 }
 
 .page-jump-menu-wrapper :is(.rounded-full) {
@@ -577,6 +626,15 @@ video {
 
 .page-jump-menu-wrapper :is(.rounded-none) {
   border-radius: 0px;
+}
+
+.page-jump-menu-wrapper :is(.border) {
+  border-width: 1px;
+}
+
+.page-jump-menu-wrapper :is(.border-gray-300) {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .page-jump-menu-wrapper :is(.\!bg-danaherpurple-500) {
@@ -594,6 +652,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.page-jump-menu-wrapper :is(.stroke-black) {
+  stroke: #000;
+}
+
 .page-jump-menu-wrapper :is(.stroke-danaherpurple-500) {
   stroke: #7523FF;
 }
@@ -602,9 +664,18 @@ video {
   stroke: #fff;
 }
 
+.page-jump-menu-wrapper :is(.stroke-1) {
+  stroke-width: 1;
+}
+
 .page-jump-menu-wrapper :is(.px-0) {
   padding-left: 0px;
   padding-right: 0px;
+}
+
+.page-jump-menu-wrapper :is(.px-4) {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .page-jump-menu-wrapper :is(.py-2) {
@@ -612,9 +683,53 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.page-jump-menu-wrapper :is(.pl-3) {
+  padding-left: 0.75rem;
+}
+
+.page-jump-menu-wrapper :is(.pl-4) {
+  padding-left: 1rem;
+}
+
+.page-jump-menu-wrapper :is(.pr-2) {
+  padding-right: 0.5rem;
+}
+
+.page-jump-menu-wrapper :is(.text-base) {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.page-jump-menu-wrapper :is(.text-sm) {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.page-jump-menu-wrapper :is(.font-bold) {
+  font-weight: 700;
+}
+
+.page-jump-menu-wrapper :is(.capitalize) {
+  text-transform: capitalize;
+}
+
+.page-jump-menu-wrapper :is(.tracking-wider) {
+  letter-spacing: 0.05em;
+}
+
 .page-jump-menu-wrapper :is(.\!text-white) {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.page-jump-menu-wrapper :is(.text-danaherblack-500) {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
+.page-jump-menu-wrapper :is(.text-danaherblue-600) {
+  --tw-text-opacity: 1;
+  color: rgb(13 49 114 / var(--tw-text-opacity));
 }
 
 .page-jump-menu-wrapper :is(.shadow-lg) {
@@ -629,9 +744,36 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.page-jump-menu-wrapper :is(.filter) {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.page-jump-menu-wrapper :is(.focus\:outline-none:focus) {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.page-jump-menu-wrapper :is(.group:hover .group-hover\:bg-danaherpurple-500) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(117 35 255 / var(--tw-bg-opacity));
+}
+
+.page-jump-menu-wrapper :is(.group:hover .group-hover\:stroke-white) {
+  stroke: #fff;
+}
+
+.page-jump-menu-wrapper :is(.group:hover .group-hover\:text-white) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
   .page-jump-menu-wrapper :is(.md\:block) {
     display: block;
+  }
+
+  .page-jump-menu-wrapper :is(.md\:hidden) {
+    display: none;
   }
 
   .page-jump-menu-wrapper :is(.md\:px-4) {
@@ -667,8 +809,53 @@ video {
   }
 }
 
+.page-jump-menu-wrapper :is(.\[\&_\.page-tabs-wrapper\]\:mx-auto .page-tabs-wrapper) {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-jump-menu-wrapper :is(.\[\&_\.page-tabs-wrapper\]\:flex .page-tabs-wrapper) {
+  display: flex;
+}
+
+@media (min-width: 768px) {
+  .page-jump-menu-wrapper :is(.\[\&_\.page-tabs-wrapper\]\:md\:max-w-7xl .page-tabs-wrapper) {
+    max-width: 80rem;
+  }
+
+  .page-jump-menu-wrapper :is(.\[\&_\.page-tabs-wrapper\]\:md\:max-w-max .page-tabs-wrapper) {
+    max-width: -moz-max-content;
+    max-width: max-content;
+  }
+}
+
 .page-jump-menu-wrapper :is(.\[\&_li\>a\>span\.icon-chevron-down\]\:hidden li>a>span.icon-chevron-down) {
   display: none;
+}
+
+.page-jump-menu-wrapper :is(.\[\&_svg\]\:stroke-danaherpurple-500 svg) {
+  stroke: #7523FF;
+}
+
+.page-jump-menu-wrapper :is(.\[\&_svg\]\:stroke-white svg) {
+  stroke: #fff;
+}
+
+.page-jump-menu-wrapper :is(.\[\&_svg\]\:stroke-1 svg) {
+  stroke-width: 1;
+}
+
+.page-jump-menu-wrapper :is(.\[\&_svg\]\:duration-300 svg) {
+  transition-duration: 300ms;
+}
+
+.page-jump-menu-wrapper :is(.group:hover .\[\&_svg\]\:group-hover\:translate-y-1 svg) {
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.page-jump-menu-wrapper :is(.group:hover .\[\&_svg\]\:group-hover\:stroke-white svg) {
+  stroke: #fff;
 }
 
 .page-jump-menu-wrapper :is(.\[\&_ul\>li\>a\]\:h-40 ul>li>a) {
